<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeRide</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="drowsiness_detection">Drowsiness Detection</string>
    <string name="accident_detection">Accident Detection</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="settings">Settings</string>
    <string name="status_inactive">Inactive</string>
    <string name="status_active">Active</string>
    <string name="status_alert">Alert!</string>
    <string name="add_contact">Add Emergency Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="drowsiness_alert">Drowsiness Detected! Please take a break.</string>
    <string name="accident_alert">Accident Detected! Sending emergency alert...</string>
    <string name="location_permission_required">Location permission is required for emergency alerts</string>
    <string name="camera_permission_required">Camera permission is required for drowsiness detection</string>
    <string name="sms_permission_required">SMS permission is required to send emergency alerts</string>
</resources>
